--- a/ByteCloud-Software/src/main/html/css/default-bytecloud.css
+++ b/ByteCloud-Software/src/main/html/css/default-bytecloud.css
@@ -43,7 +43,7 @@ h1, .h1, h2, .h2, h3, .h3 {
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-.login-form input {
+.login-form input, .login-form select {
     font-family: "Roboto", sans-serif;
     outline: 0;
     background: #f2f2f2;
